Menu z-index fixed

--- a/themes/style1/defaults.less
+++ b/themes/style1/defaults.less
@@ -147,6 +147,7 @@ i.e. top margin or bottom margin for each grid
 /* Menu Modules */
 .dc-menu{
 	.block{padding:0 !important;} /* hide block margin/padding after menu */
+	z-index:2;
 }
 
 /**
