--- a/themes/style3/menu.less
+++ b/themes/style3/menu.less
@@ -5,7 +5,6 @@
 		border-bottom:solid 1px #e7e7e7;
 	}
 }
-.dc-menu{z-index:999;}
 .dc-nav-show{left:0 !important;} // for nav
 .dc-body-show{left:200px; overflow-x:hidden;} // for body
 .dc-menu-show{position:fixed;left:200px;top:0;} // for menu ||| lines
